# test-bazel-ts-monorepo

./: BUILD.bazel  README.md  WORKSPACE.bazel  index.ts  package-lock.json  package.json  tsconfig.json
