# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
  name = "root",
  srcs = glob(["index.ts"]),
  deps = [
    "//packages/comp1"
  ]
)

exports_files([
  "tsconfig.json"
])